# cpp_weekly

./: CMakeLists.txt
.github/workflows/: cmake.yml
class/: class_test.cc
conversion_function/: conversion_function.cc
formatting/: formatting_test.cc
functor/: functor_test.cc
future/: future_test.cc  future_test.cpp
include/: timer.h
io/: io_test.cc
misc/: optional_test.cc  typeinfo_test.cc
pointer_like_classes/: iterator_case_test.cc
stl/: valarray_test.cc
strings/: string_test.cc  string_view_test.cc
template/: Variadicfunc.cc  chap4_variadic_templates.cc  chap_1_function_templates.cc  class_template_test.cc  function_basic.cc  function_template_test.cc  invoke_and_bind_back.cc  partial_specialization_test.cc  ref_cref_test.cc  using_template_test.cc
